# gridiron-players

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: espn-cfb-live.yml  run-scraper.yml  update-data.yml
data/exports/: cfb_intel.sqlite  espn_cfb_games.json  espn_cfb_scoreboard.json  injuries.json  news.json  player_index.json  players.csv  players.json  teams.json
data/processed/: player_id_map.json
docs/: ADDING_A_SOURCE.md  DATA_SCHEMA.md  SOURCES.md
scripts/: build_index.py  run_espn_cfb_update.py  run_update.py  validate_data.py
src/cfb_intel/: __init__.py  config.py  schemas.py
src/cfb_intel/pipeline/: collect_injuries.py  collect_news.py  collect_rosters.py  collect_stats.py  dedupe.py  espn_cfb_live.py  export.py  normalize.py  update_all.py
src/cfb_intel/sources/: __init__.py  base.py  espn.py  ncaa.py  rss_news.py  sports_reference.py  team_sites.py
src/cfb_intel/storage/: csv_store.py  json_store.py  sqlite_store.py
src/cfb_intel/utils/: dates.py  http.py  logging.py  rate_limit.py  text.py
tests/: test_dedupe.py  test_espn_cfb_live.py  test_normalize.py  test_schemas.py  test_sources.py  test_stats.py
